<resources>

    <!-- App -->
    <string name="app_name">ChatterFlow</string>

    <!-- Authentication -->
    <string name="title_create_account">Create Account</string>
    <string name="title_login">Login</string>

    <string name="create_account">Create Account</string>
    <string name="login_account">Welcome Back</string>
    <string name="create_account_description">Create your account to start chatting.</string>

    <string name="et_name">Name</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>

    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>

    <string name="btn_to_login">Already have an account?</string>
    <string name="btn_to_register">Don\'t have an account?</string>

    <!-- Users -->
    <string name="select_user">Select User</string>
    <string name="search_user">Search Users</string>
    <string name="no_user_found">No users found</string>

    <!-- Chat -->
    <string name="typing">Typing...</string>
    <string name="typing_message">Typing a message...</string>

    <string name="msg_send">Sent message</string>
    <string name="msg_receiver">Received message</string>

    <string name="edited">Edited</string>

    <string name="item_date">Yesterday</string>

    <!-- Toolbar -->
    <string name="search_menu_listChat">Search Chats</string>
    <string name="account_menu_listChat">Account</string>
    <string name="settings_menu_listChat">Settings</string>
    <string name="logout_menu_listChat">Logout</string>

    <!-- Account -->
    <string name="account">Account</string>
    <string name="account_uid">UID</string>
    <string name="account_email">email@example.com</string>

    <string name="account_user_info">User Information</string>
    <string name="account_btn_edit">Edit Profile</string>
    <string name="account_btn_change_password">Change Password</string>

    <string name="account_user_txt_info">
        Hi! I\'m an Android developer using Kotlin.
    </string>

    <!-- Menu -->
    <string name="copy_menu">Copy</string>
    <string name="edit_menu">Edit</string>
    <string name="delete_menu">Delete</string>
    <string name="refresh_menu">Refresh</string>
    <string name="information">Information</string>
    <string name="remove_menu">Clear Chat</string>

    <!-- Success -->
    <string name="copy_success">Message copied successfully.</string>
    <string name="edit_success">Message edited successfully.</string>
    <string name="delete_success">Message deleted successfully.</string>
    <string name="remove_success">Chat cleared successfully.</string>

    <!-- Dialog -->
    <string name="title_delete_message">Delete Message</string>
    <string name="title_removeAll_message">Clear Chat</string>

    <string name="btn_yes_delete_message">Delete</string>
    <string name="btn_cancel">Cancel</string>

    <string name="delete_message">
        Are you sure you want to delete this message?
    </string>

    <string name="removeAll_message">
        Are you sure you want to clear this chat?
    </string>

    <string name="logout_dialog_message">
        Are you sure you want to log out?
    </string>

    <!-- Errors -->
    <string name="error_email_already_exists_AuthError">
        This email is already registered.
    </string>

    <string name="error_weak_password_AuthError">
        Password is too weak.
    </string>

    <string name="error_invalid_credentials_AuthError">
        Invalid email or password.
    </string>

    <string name="error_network_error_AuthError">
        Network connection unavailable.
    </string>

    <string name="error_unknown_error_AuthError">
        Something went wrong.
    </string>

    <string name="error_empty_password_validError">
        Please enter your password.
    </string>

    <string name="error_empty_email_validError">
        Please enter your email.
    </string>

    <string name="error_invalid_email_validError">
        Please enter a valid email address.
    </string>

    <string name="error_empty_name_validError">
        Please enter your name.
    </string>

    <string name="success_delete_chat">
        Success delete chat
    </string>

    <string name="menu_delete_chat">
      Delete chat
    </string>
    <string name="menu_delete_chat_msg_dialog">
        are you want sure delete htis chat ?
    </string>

    <string name="menu_about">
    About app
    </string>


    <string name="app_version">Version 1.0.0</string>


    <string name="about_title">About Application</string>


    <string name="about_description">
ChatterFlow is a modern real-time messaging application built with Kotlin and Firebase.
It provides a simple and smooth chat experience with modern Android technologies.
</string>


    <string name="developer_title">Developer</string>


    <string name="developer_name">
Ahmed Ali Aldhmshi
</string>


    <string name="developer_role">
Android Kotlin Developer
</string>


    <string name="technologies">
Built With:

• Kotlin
• Firebase Firestore
• MVVM Architecture
• Hilt Dependency Injection
• Coroutines
• StateFlow
• Material 3
</string>


    <string name="contact_title">
Contact
</string>


    <string name="email">
Email
</string>


    <string name="github">
GitHub
</string>


    <string name="developer_email">
ahmed.aldhmshi.dev@gmail.com
</string>


    <string name="github_url">
https://github.com/ahmedaldhmshidev-art
</string>


    <string name="copyright">
© 2026 ChatterFlow
</string>

    <string name="title_settings">
Setting
</string>
    <string name="language">
Languages
</string>
    <string name="theme">
Theme
</string>
    <string name="version">
Version
</string>

    <string name="version.1.0.0">1.0.0</string>

    <string name="language_english">English</string>
    <string name="language_arabic">العربية</string>

    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>


    <string name="title_change_language">Change language</string>
    <string name="message_change_language">do you want change language?</string>
    <string name="btn_change_language">Change</string>
    <string name="success_edited_profile">Save successfully</string>


    <string name="bio_account">Bio account</string>
    <string name="name_account">Name account</string>

    <string name="save">Save</string>
    <string name="title_dialog_edit_account">Edit Account</string>
    <string name="success_change_password_account">Successfully to change password</string>

    <string name="title_dialog_change_password_account">Change password</string>
    <string name="message_dialog_change_password_account">do you want change password? </string>
    <string name="current_password_change_password_account">Current password</string>
    <string name="new_password_change_password_account">New password</string>
    <string name="confirm_password_change_password_account">Confirm password</string>
    <string name="error_new_password_less_6">Password must be at least 6 characters </string>
    <string name="error_confirm_password_different">New password must be different from the current password</string>
    <string name="error_confirm_password_does_not_match">Confirm password does not match new password</string>

    <string name="error_blank_new_password">New password is required</string>
    <string name="error_blank_confirm_password">confirm password is required</string>
    <string name="error_blank_current_password">Current password is required</string>

    <string name="error_blank_name_profile">Name cannot be empty</string>
    <string name="error_new_name_must_be_different">New name must be different</string>

    <string name="error_no_chat_found">No chat found</string>
    <string name="error_no_user_found">No user found</string>

    <string name="error_no_session">Your session has expired. Please sign in again.</string>
    <string name="error_invalid_current_password">Current password is incorrect.</string>
    <string name="error_new_password_must_be_different">New Password must be different from the current password.</string>

    <string name="error_no_changed_profile">No changes were made</string>
    <string name="error_permission_denied">You don not have permission to perform this operation</string>

    <string name="message_deleted_by_other">🚫 This message was deleted.</string>
    <string name="message_deleted_by_me">🚫 You deleted this message.</string>


    <string name="error_offline">
    No internet connection. Please try again.
</string>

    <string name="error_not_found">
    The requested data was not found.
</string>

    <string name="error_failed_precondition">
    The operation cannot be completed right now. Please try again.
</string>

    <string name="error_aborted">
    The operation was interrupted. Please try again.
</string>

    <string name="error_deadline_exceeded">
    The connection timed out.
</string>

    <string name="error_authentication">
    An error occurred while verifying your account.
</string>

    <string name="error_network">
    Unable to connect to the internet. Check your connection and try again.
</string>

    <string name="error_unknown">
    Something went wrong. Please try again.
</string>
</resources>